--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_core: ^2.4.1
   provider: ^6.0.5
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
